re PR target/52238 (-mms-bitfields: __attribute__ ((aligned (n))) ignored for struct members)

PR target/52238
	* stor-layout.c (place_field): Handle desired_align for
	ms-bitfields, too.

	* gcc.dg/bf-ms-layout-3.c: New testcase.

From-SVN: r184409